[gd_scene load_steps=10 format=3 uid="uid://unp88u61pdei"]

[ext_resource type="Texture2D" uid="uid://b2ryvrdu5vyjx" path="res://assets/Backgrounds/Tilesets/TilesetDungeon.png" id="1_hyhkd"]
[ext_resource type="Script" path="res://resources/doors/locked_door.gd" id="2_e44g3"]
[ext_resource type="Shape2D" uid="uid://b1bljrl0kcin4" path="res://resources/weapons/locked_door_collision_shape.tres" id="2_pj77w"]
[ext_resource type="AudioStream" uid="uid://cbvkkw5ul7ivg" path="res://assets/Sounds/Game/Explosion3.wav" id="4_gthax"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h7gqs"]
radius = 26.0

[sub_resource type="Animation" id="Animation_ljq60"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-0.0747018, 0.029644, 16.3329, 16.0773)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f7q8y"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-0.0747018, 0.029644, 16.3329, 16.0773)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3j5us"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Rect2(0.0689487, 0.0502315, 16.0323, 15.963), Rect2(32.1049, 17.0328, 16.6594, 14.9765), Rect2(48.0352, 17.893, 15.9359, 14.2229)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xux6x"]
_data = {
"RESET": SubResource("Animation_ljq60"),
"default": SubResource("Animation_f7q8y"),
"open": SubResource("Animation_3j5us")
}

[node name="LockedDoor" type="StaticBody2D"]
z_index = -1
collision_layer = 64
script = ExtResource("2_e44g3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_hyhkd")
region_enabled = true
region_rect = Rect2(-0.0747018, 0.029644, 16.3329, 16.0773)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Danger"]]
position = Vector2(0, -8)
shape = ExtResource("2_pj77w")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_h7gqs")

[node name="Label" type="Label" parent="."]
visible = false
z_index = 1
offset_left = -36.0
offset_top = -30.0
offset_right = 37.0
offset_bottom = -13.0
theme_override_font_sizes/font_size = 12
text = "LOCKED"

[node name="DoorAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gthax")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xux6x")
}
autoplay = "default"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
